# eeg-signal-classification

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: learn-github-actions.yml  pre-commit.yml
config/: config.yaml  config_alternative.yaml
eeg-catboost/: commands.py
eeg-catboost/catboost_info/: catboost_training.json  time_left.tsv
eeg-catboost/catboost_info/learn/: events.out.tfevents
eeg-signal-classification/: commands.py  infer.py  train.py
eeg-signal-classification/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
eeg-signal-classification/catboost_info/learn/: events.out.tfevents
mlruns/0/: meta.yaml
mlruns/898887541321670110/: meta.yaml
mlruns/898887541321670110/0b8e2b3f040b42d8aeb3002ded920403/: meta.yaml
mlruns/898887541321670110/196c5b281d904db6a151191e46aa5049/: meta.yaml
mlruns/898887541321670110/1a235449cbce492fb16211e80ae3897e/: meta.yaml
mlruns/898887541321670110/3010b842c7e34b0da823a109379cdae5/: meta.yaml
mlruns/898887541321670110/30ee2b6d0c0b464eaceb7044efbbc7ed/: meta.yaml
mlruns/898887541321670110/3694411c940841f4a3b38fbf8c051368/: meta.yaml
mlruns/898887541321670110/67b7598416f84e5a8055264c208f195c/: meta.yaml
mlruns/898887541321670110/70d928c4b35f4fc79ed7e01d9f5ba8db/: meta.yaml
mlruns/898887541321670110/826a192ce5804cdead40564b3e464112/: meta.yaml
mlruns/898887541321670110/87ca70211b064b2e913457d3af2dd6fd/: meta.yaml
result/: out.csv
src/: main.py  train.py
(+62 files in other folders)
