[tool.poetry]
name = "eeg-catboost"
version = "0.1.0"
description = ""
authors = ["mikhail.shuravin <mashuravin@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
hydra-core = "^1.3.2"
scikit-learn = "^1.3.2"
fire = "^0.5.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
dvc = "^3.30.3"
catboost = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
